# public-general-ledger-analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: deploy_glue_scripts.yml
infra/: Makefile
infra/cloudformation/: athena.yml  dynamodb.yml  ecr.yml  ecs.yml  glue.yml  iam.yml  stepfunctions.yml
infra/iam/: glue_okgl_s3_raw_read.json  glue_okgl_s3_silver_write.json
notebooks/: 00_get_data.ipynb  01_data_quality.ipynb  02_process_raw_to_silver_research.ipynb
src/config/: constants.py  paths.py
src/data/: fetch_data.py
src/glue_jobs/: raw_to_silver_backfill.py
src/ingestion/: __init__.py  fetch_data.py
src/metadata/: __init__.py  dynamodb.py
src/s3/: list_objects.py  write_object.py
