[project]
name = "gloklahoma"
description = "A project for processing and analyzing Oklahoma General Ledger data."
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
    "boto3",
    "duckdb",
    "rich",
    "charset-normalizer",
    "pyspark"
]
dynamic = ["version"]

[project.optional-dependencies]
stubs = ["boto3-stubs[s3]"]
notebooks = ["jupyterlab", "ipykernel", "rich", "matplotlib", "seaborn"]
test = ["pytest", "pytest-cov", "moto[s3]"]
static-code-qa = [
    "pre-commit",
    "pylint",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "radon",
]

dev = ["gloklahoma[test,static-code-qa,stubs,notebooks]"]

[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | venv
  | notebooks
  | data
)/
'''

[tool.flake8]
docstring-convention = "all"
ignore = ["D103", "D107", "D200", "D212", "D400", "D401", "D404", "D415", "E501", "W503", "W605", "D203", "D100"]
exclude = ["venv", "data", "notebooks"]
max-line-length = 119

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.mypy]
ignore_missing_imports = true
strict_optional = false
disable_error_code = ["import"]
